--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "hbs": "^4.2.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.5",
     "nodemon": "^2.0.16",
     "path": "^0.12.7"
   }
